# vira-tauri-project

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: AiWindow.tsx  App.tsx  HistoryWindow.tsx  SettingsModal.tsx  SettingsWindow.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  state.rs  stt.rs
src-tauri/src/commands/: history.rs  interview.rs  mod.rs  window.rs
src-tauri/src/config/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: audio.rs  mod.rs  stt.rs  translation.rs
src-tauri/src/utils/: window.rs
src/assets/: personality.json
src/components/: Icons.tsx
src/components/ai/: ChatInput.tsx  ChatMessages.tsx
src/hooks/: useAiChat.ts
src/services/: ai.ts
