[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screencapturekit = { version = "1.5.4", features = ["macos_13_0"] }
tokio-stream = "0.1.18"
tokio = { version = "1.50.0", features = ["full"] }
deepgram = "0.9.1"
tokio-tungstenite = "0.28.0"
async-trait = "0.1.89"
dotenvy = "0.15.7"
tauri-plugin-log = "2"
log = "0.4"
futures = "0.3.32"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1.3"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow"] }

